--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -298,10 +298,10 @@
             <label>Filter by:</label>
             <select onchange="filterCategory(this.value)">
                 <option value="all">All Categories</option>
-                <option value="Lectures">Lectures</option>
-                <option value="Classrooms">Classrooms</option>
-                <option value="Facilities">Facilities</option>
-                <option value="Events">Events</option>
+                <option value="Course Content">Course Content</option>
+                <option value="Teaching Methods">Teaching Methods</option>
+                <option value="Faculty Interaction">Faculty Interaction</option>
+                <option value="Evaluation & Assessment">Evaluation & Assessment</option>
                 <option value="Other">Other</option>
             </select>
 
